[package]
name = "ploppy-text"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.tech>"]

[dependencies]
futures = "^0.1"
native-tls = "^0.1"
tokio-core = "^0.1"
tokio-io = "^0.1"
tokio-tls = "^0.1"
base64 = "^0.6"
json = "^0.11"
lettre = "^0.6"
openssl = "^0.9"
adi_storage = "^0.2"
